# rust-book

./: .gitignore
closures/src/: main.rs
collections/src/: lib.rs  main.rs
concurrency/src/: main.rs
errors/src/: main.rs
generic_traits_lifetimes/src/: main.rs
guessing_game/src/: main.rs
helloworld-tonic/: Cargo.toml
helloworld-tonic/proto/: helloworld.proto
helloworld-tonic/src/: client.rs  server.rs
mini_grep/: poem.txt
mini_grep/src/: lib.rs  main.rs
my-project/src/: lib.rs
my-project/src/back_of_house/: hosting.rs
smart_pointers/src/: main.rs
state_pattern/src/: lib.rs
structs/src/: main.rs
testing/src/: lib.rs
tokio_redis/: .env  Cargo.toml
tokio_redis/src/: main.rs
variables/src/: main.rs
