[package]
name = "helloworld-tonic"
version = "0.1.0"
edition = "2024"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "helloworld-server"
path = "src/server.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "helloworld-client"
path = "src/client.rs"

[dependencies]
prost = "0.13.5"
tokio = { version = "1.45.0", features = ["full"] }
tonic = "0.13.1"

[build-dependencies]
tonic-build = "0.13.1"
